# azure-ai-engineer

./: README.md  main.py  pyproject.toml
ai/: language_translation.ipynb  test_translations.ipynb
ai/promptflows/new-chat-flow-created-at-2025-5-31/: azure_openai.yaml  chat_variant_1.jinja2  flow.dag.yaml  python_test.py
ai/promptflows/new-chat-flow-created-at-2025-5-31/.promptflow/: flow.tools.json
